force-app/main/default/objects/SPEN_CaseInformation__c/SPEN_CaseInformation__c.object-meta.xml
<CustomObject>
    <label>Case Information</label>
    <nameField>
        <displayFormat>CI-{00000000}</displayFormat>
        <label>Case Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>