force-app/main/default/objects/SPEN_CaseInformation__c/fields/Any_additional_completion_criteria__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_completion_criteria__c</fullName>
    <description>CRMD-715</description>
    <label>Any additional completion criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>