force-app/main/default/objects/SPEN_CaseInformation__c/fields/Damaged_Other__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Other__c</fullName>
    <description>CRMD-7691</description>
    <label>Damaged Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>