force-app/main/default/objects/SPEN_CaseInformation__c/fields/ENA_Processing_Successful__c.field-meta.xml
<CustomField>
    <fullName>ENA_Processing_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ENA Processing Successful</label>
    <type>Checkbox</type>
</CustomField>