force-app/main/default/objects/SPEN_CaseInformation__c/fields/Interface_with_overhead_line_contractor__c.field-meta.xml
<CustomField>
    <fullName>Interface_with_overhead_line_contractor__c</fullName>
    <description>CRMD-715</description>
    <label>Interface with overhead line contractor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>