force-app/main/default/objects/SPEN_CaseInformation__c/fields/Materials_to_be_free_issued_and_Location__c.field-meta.xml
<CustomField>
    <fullName>Materials_to_be_free_issued_and_Location__c</fullName>
    <description>CRMD-715</description>
    <label>Free Issued Material &amp; Collect Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>