force-app/main/default/objects/SPEN_CaseInformation__c/fields/Nootherissuesidentifiedwith_adequacy__c.field-meta.xml
<CustomField>
    <fullName>Nootherissuesidentifiedwith_adequacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No other issues identified with adequacy</label>
    <type>Checkbox</type>
</CustomField>