force-app/main/default/objects/SPEN_CaseInformation__c/fields/Number_of_landowners_satisfaction_report__c.field-meta.xml
<CustomField>
    <fullName>Number_of_landowners_satisfaction_report__c</fullName>
    <description>CRMD-715</description>
    <label>Number of landowners satisfaction report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>