force-app/main/default/objects/SPEN_CaseInformation__c/fields/Reinstatement_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Contractor__c</fullName>
    <description>CRMD-715</description>
    <label>Reinstatement Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>