force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_10WDApptBooked__c.field-meta.xml
<CustomField>
    <fullName>SPEN_10WDApptBooked__c</fullName>
    <label>10WD Appt Booked</label>
    <type>Date</type>
</CustomField>