force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_10WDstatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_10WDstatus__c</fullName>
    <label>10WD status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>