force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_28CDresolutiondate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_28CDresolutiondate__c</fullName>
    <label>28CD resolution date</label>
    <type>Date</type>
</CustomField>