force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_3rd_Party_Pack_issued_to_Contractor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_3rd_Party_Pack_issued_to_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRMD-715</description>
    <label>3rd Party Pack issued to Contractor:</label>
    <type>Checkbox</type>
</CustomField>