force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_40WDresolutiondate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_40WDresolutiondate__c</fullName>
    <label>40WD resolution date</label>
    <type>Date</type>
</CustomField>