force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_40WDstatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_40WDstatus__c</fullName>
    <label>40WD status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
                <isActive>false</isActive>
                <label>Null</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>