force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AdditionalImpactedcustomers__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalImpactedcustomers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Impacted customers</label>
    <type>Checkbox</type>
</CustomField>