force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>