force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AddressLine1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>