force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AddressLine2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>