force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AggregatedGenerationThreshold3Phase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AggregatedGenerationThreshold3Phase__c</fullName>
    <label>Aggregated Generation Threshold 3 Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>