force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AggregatedThreshold3PhasekWperPhas__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AggregatedThreshold3PhasekWperPhas__c</fullName>
    <label>Aggregated Threshold 3 Phase kW per Phas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>