force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AllocatedtoLegal__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AllocatedtoLegal__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Allocated to Legal</label>
    <type>Date</type>
</CustomField>