force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AppicationClassVersion__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AppicationClassVersion__c</fullName>
    <label>Appication Class Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>