force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ApplicationClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationClass__c</fullName>
    <label>Application Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>