force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationID__c</fullName>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>