force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationStatus__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Assessment</fullName>
            </value>
            <value>
                <fullName>Scanning Cut-Out Image</fullName>
            </value>
            <value>
                <fullName>Under Assessment</fullName>
            </value>
            <value>
                <fullName>Escalated to DNO</fullName>
            </value>
            <value>
                <fullName>Auto-Approved</fullName>
            </value>
            <value>
                <fullName>DNO Approved</fullName>
            </value>
            <value>
                <fullName>DNO Approved with Limit</fullName>
            </value>
            <value>
                <fullName>Further Information Required</fullName>
            </value>
            <value>
                <fullName>Failed - Too Large</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Image Scan Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>