force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Appointment1date__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Appointment1date__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Appointment 1 date</label>
    <type>Date</type>
</CustomField>