force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Appointment2bookeddate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Appointment2bookeddate__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Appointment 2 booked date</label>
    <type>Date</type>
</CustomField>