force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AppointmentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AppointmentType__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>