force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssessedBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssessedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Information</relationshipName>
    <type>Lookup</type>
</CustomField>