force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Assessmentonly__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Assessmentonly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment only</label>
    <type>Checkbox</type>
</CustomField>