force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssessorReviewDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssessorReviewDate__c</fullName>
    <label>Assessor Review Date</label>
    <type>Date</type>
</CustomField>