force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssetConditionClearanceCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetConditionClearanceCode__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Asset Condition Clearance Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved - Apology Provided</fullName>
            </value>
            <value>
                <fullName>Resolved - Cancellation</fullName>
            </value>
            <value>
                <fullName>Resolved - Claim Refuted</fullName>
            </value>
            <value>
                <fullName>Resolved - Customer Service Payment</fullName>
            </value>
            <value>
                <fullName>Resolved - Explanation Provided</fullName>
            </value>
            <value>
                <fullName>Resolved - Hot Food</fullName>
            </value>
            <value>
                <fullName>Resolved - Hotels</fullName>
            </value>
            <value>
                <fullName>Resolved - Information provided</fullName>
            </value>
            <value>
                <fullName>Resolved - Insurance payment</fullName>
            </value>
            <value>
                <fullName>Resolved - Ombudsman Full Case Issued - Findings Against</fullName>
            </value>
            <value>
                <fullName>Resolved - Ombudsman Full Case Issued - Findings In SPEN Favour</fullName>
            </value>
            <value>
                <fullName>Resolved - Ombudsman PICC / MAS</fullName>
            </value>
            <value>
                <fullName>Resolved - Ombudsman Withdrawal (OTOR)</fullName>
            </value>
            <value>
                <fullName>Resolved - Simply Thank You Gesture</fullName>
            </value>
            <value>
                <fullName>Resolved - Wayleave payments made</fullName>
            </value>
            <value>
                <fullName>Resolved - Wayleaves sent</fullName>
            </value>
            <value>
                <fullName>Resolved - Work Completed / Issues Resolved</fullName>
            </value>
            <value>
                <fullName>Resolved -GS Payment</fullName>
            </value>
            <value>
                <fullName>Closed - Neutral Fault Invoice Updated</fullName>
            </value>
            <value>
                <fullName>Closed - No response from customer</fullName>
            </value>
            <value>
                <fullName>Service(s) delivered</fullName>
            </value>
            <value>
                <fullName>Lack of engagement</fullName>
            </value>
            <value>
                <fullName>No partner</fullName>
            </value>
            <value>
                <fullName>Partner could not deliver</fullName>
            </value>
            <value>
                <fullName>Customer denied request for service</fullName>
            </value>
            <value>
                <fullName>Customer changed their mind (pre-referral)</fullName>
            </value>
            <value>
                <fullName>Customer changed their mind (post-referral)</fullName>
            </value>
            <value>
                <fullName>Customer received service but does not want to progress</fullName>
            </value>
            <value>
                <fullName>Referral created in error</fullName>
            </value>
            <value>
                <fullName>Resolution - Deadlock Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>