force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssetConditionClearanceDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetConditionClearanceDate__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Asset Condition Clearance Date</label>
    <type>DateTime</type>
</CustomField>