force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssetConditionCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetConditionCode__c</fullName>
    <label>Asset Condition Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A01</fullName>
            </value>
            <value>
                <fullName>A03</fullName>
            </value>
            <value>
                <fullName>A04</fullName>
            </value>
            <value>
                <fullName>A05</fullName>
            </value>
            <value>
                <fullName>A07</fullName>
            </value>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>A12</fullName>
            </value>
            <value>
                <fullName>A14</fullName>
            </value>
            <value>
                <fullName>A15</fullName>
            </value>
            <value>
                <fullName>A17</fullName>
            </value>
            <value>
                <fullName>A19</fullName>
            </value>
            <value>
                <fullName>B01</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>B03</fullName>
            </value>
            <value>
                <fullName>B04</fullName>
            </value>
            <value>
                <fullName>B05</fullName>
            </value>
            <value>
                <fullName>B07</fullName>
            </value>
            <value>
                <fullName>B08</fullName>
            </value>
            <value>
                <fullName>B10</fullName>
            </value>
            <value>
                <fullName>B11</fullName>
            </value>
            <value>
                <fullName>B12</fullName>
            </value>
            <value>
                <fullName>C02</fullName>
            </value>
            <value>
                <fullName>C03</fullName>
            </value>
            <value>
                <fullName>C06</fullName>
            </value>
            <value>
                <fullName>C07</fullName>
            </value>
            <value>
                <fullName>C11</fullName>
            </value>
            <value>
                <fullName>C14</fullName>
            </value>
            <value>
                <fullName>C15</fullName>
            </value>
            <value>
                <fullName>C16</fullName>
            </value>
            <value>
                <fullName>C17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>