force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssetConditionReportDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetConditionReportDate__c</fullName>
    <label>Asset Condition Report Date</label>
    <type>Date</type>
</CustomField>