force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_AssetReportAdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetReportAdditionalInformation__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Asset Report Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>