force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_BOQReferenceInvoiceReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BOQReferenceInvoiceReference__c</fullName>
    <label>BOQ Reference &amp; Invoice Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>