force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CableDepthFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CableDepthFormula__c</fullName>
    <formula>IF( AND( ISPICKVAL(SPEN_IfYesIsRoadCrossingClearanceor58__c , &apos;Yes&apos;), !IsBlank(SPEN_CableDepthmm__c)),SPEN_CableDepthmm__c&amp; &apos; / ≥ 5.8m&apos;,
IF( AND( ISPICKVAL(SPEN_IfYesIsRoadCrossingClearanceor58__c , &apos;Yes&apos;), IsBlank(SPEN_CableDepthmm__c)),&apos;N/A / ≥ 5.8m&apos;,
IF( AND( ISPICKVAL(SPEN_GroundClearanceor52m__c  , &apos;Yes&apos;), !IsBlank(SPEN_CableDepthmm__c)),SPEN_CableDepthmm__c&amp; &apos; / ≥ 5.2m&apos;,
IF( AND( ISPICKVAL(SPEN_GroundClearanceor52m__c  , &apos;Yes&apos;), IsBlank(SPEN_CableDepthmm__c)), &apos;N/A / ≥ 5.2m&apos;,
IF(!IsBlank(SPEN_CableDepthmm__c), SPEN_CableDepthmm__c&amp; &apos; / N/A&apos;, &apos;&apos;

)
))))</formula>
    <label>Cable Depth Formula</label>
    <type>Text</type>
</CustomField>