force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CableDepthmm__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CableDepthmm__c</fullName>
    <description>CRMD-7691</description>
    <label>Cable Depth (mm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>