force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRMD-731</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Information</relationshipLabel>
    <relationshipName>Case_Information</relationshipName>
    <type>Lookup</type>
</CustomField>