force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CaseRef__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseRef__c</fullName>
    <formula>SPEN_Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Ref</label>
    <type>Text</type>
</CustomField>