force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CATAMadeSafeandResolvedonFirstVi__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CATAMadeSafeandResolvedonFirstVi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of CRMD-10581</description>
    <label>CAT-A Made Safe &amp; Resolved on FirstVisit</label>
    <type>Checkbox</type>
</CustomField>