force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CollaborationRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CollaborationRequired__c</fullName>
    <description>Collaboration Required for Web Form</description>
    <label>Collaboration Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>