force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CommencementDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommencementDate__c</fullName>
    <formula>SPEN_Case__r.SPEN_ProjectCommencementDate__c</formula>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>