force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompletionDate__c</fullName>
    <formula>SPEN_Case__r.SPEN_CompletionDate__c</formula>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>