force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ConductorType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConductorType__c</fullName>
    <description>CRMD-7691</description>
    <label>Conductor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>