force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ConnectandNotify__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectandNotify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect and Notify</label>
    <type>Checkbox</type>
</CustomField>