force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ContactMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactMobileNumber__c</fullName>
    <description>CRMD-7691</description>
    <label>Contact Mobile Number</label>
    <type>Phone</type>
</CustomField>