force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Contractor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contractor__c</fullName>
    <description>CRMD-731</description>
    <label>Contractor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggreko UK Limited</fullName>
            </value>
            <value>
                <fullName>Balfour Beatty</fullName>
            </value>
            <value>
                <fullName>C. Spratt Multi Utility</fullName>
            </value>
            <value>
                <fullName>Clancy Docwra Ltd</fullName>
            </value>
            <value>
                <fullName>C-Plan Telecommunications Ltd</fullName>
            </value>
            <value>
                <fullName>DT Hughes</fullName>
            </value>
            <value>
                <fullName>O&apos;Connors Overhead</fullName>
            </value>
            <value>
                <fullName>Overlec Ltd</fullName>
            </value>
            <value>
                <fullName>SPIE</fullName>
            </value>
            <value>
                <fullName>Voltcom Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Chevron TM</fullName>
            </value>
            <value>
                <fullName>CityFibre</fullName>
            </value>
            <value>
                <fullName>Connors Design and Restoration</fullName>
            </value>
            <value>
                <fullName>D&amp;C Jones</fullName>
            </value>
            <value>
                <fullName>Electricity Asset Services</fullName>
            </value>
            <value>
                <fullName>Emerald Power</fullName>
            </value>
            <value>
                <fullName>Freedom</fullName>
            </value>
            <value>
                <fullName>IQA</fullName>
            </value>
            <value>
                <fullName>Keltbray</fullName>
            </value>
            <value>
                <fullName>Morrisons Energy Services</fullName>
            </value>
            <value>
                <fullName>Optimum Technical Services</fullName>
            </value>
            <value>
                <fullName>OPUS</fullName>
            </value>
            <value>
                <fullName>PLPC</fullName>
            </value>
            <value>
                <fullName>PMK Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Prysmian</fullName>
            </value>
            <value>
                <fullName>Quartzelec</fullName>
            </value>
            <value>
                <fullName>Singleton &amp; Smart</fullName>
            </value>
            <value>
                <fullName>Walker &amp; Watts Ltd</fullName>
            </value>
            <value>
                <fullName>O’Connors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>