force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ContractorAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractorAddress__c</fullName>
    <description>CRMD-7691</description>
    <label>Contractor Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>