force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ContractorPostcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractorPostcode__c</fullName>
    <label>Contractor Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>