force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CreatedDate__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>