force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CTMetered__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CTMetered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CT Metered</label>
    <type>Checkbox</type>
</CustomField>