force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CustomerAgreedAppointmentTimeBand__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerAgreedAppointmentTimeBand__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Customer Agreed Appointment Time Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>DY</fullName>
            </value>
            <value>
                <fullName>2H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>