force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CustomerCancelledAppointment2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerCancelledAppointment2__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Customer Cancelled Appointment 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>