force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_customercontacteddirectlytoarrange__c.field-meta.xml
<CustomField>
    <fullName>SPEN_customercontacteddirectlytoarrange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>customer contacted directly to arrange</label>
    <type>Checkbox</type>
</CustomField>