force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_CustomerImpact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerImpact__c</fullName>
    <label>Customer Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter Drop</fullName>
            </value>
            <value>
                <fullName>Community Liaison Meetings</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>