force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_D0126processed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_D0126processed__c</fullName>
    <label>D0126 processed</label>
    <type>Date</type>
</CustomField>