force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_D0126SentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_D0126SentDate__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>D0126 Sent Date</label>
    <type>DateTime</type>
</CustomField>